<resources>
    <string name="app_name">Night Clock</string>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="sett_reminder_desc">We will remind you when you set the alarm</string>
    <string name="sett_reminder_header">Set Reminder</string>
    <string name="sett_reminder_label">Remind Me</string>
    <string name="sett_reminder_time_content">8 : 00 PM</string>
    <string name="sett_reminder_time_label">Set Reminder Time</string>
    <string name="status_bar_notification_info_overflow">999+</string>

    <string name="channel_name">Alarms notifications</string>
    <string name="channel_description">Receive Notifications alarms</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_clear">Clear Alarms</string>
    <string name="menu_remove_persisted">Remove Past Persisted Alarms</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="click_on_the_plus_to_add_alarm">Click on the \'+\' to add an alarm</string>
    <string name="persist">Persist</string>
    <string name="enter_unique_id">Enter unique id</string>
    <string name="uid">UID</string>
    <string name="start_time">Alarm time: %1$s</string>
    <string name="start_date">Alarm date: %1$s</string>
    <string name="activity_alarms_description">Here you can see the list of existing alarms.\nClick on any of the alarms to cancel it.\nSee settings for more options.</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="cancel_alarm_confirmation_text">Cancel alarm?</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="row_alarm_uid">Uid: </string>
    <string name="row_alarm_time">Time: </string>
    <string name="row_alarm_persist">Persist: </string>
    <string name="remove_persisted_alarms_explanation">Click on settings and choose remove past persisted alarms to cancel previous persisted alarms</string>
</resources>
